Small fix to take into account tomcat 8 instead of 7